--- a/online-tutoring/package.json
+++ b/online-tutoring/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-js": "^4.2.0",
     "emailjs": "^4.0.3",
     "firebase": "^10.3.1",
     "font-awesome": "^4.7.0",
